--- a/index.html
+++ b/index.html
@@ -17,41 +17,49 @@
         <div data-key="65" class="key">
           <h1>A</h1>
           <span class="sound">clap</span>
+          <button onclick="fun1()">CLICK</button>
         </div>
 
         <div data-key="68" class="key">
           <h1>D</h1>
           <span class="sound">kick</span>
+          <button onclick="fun2()">CLICK</button>
         </div>
 
         <div data-key="70" class="key">
           <h1>F</h1>
           <span class="sound">openhat</span>
+          <button onclick="fun3()">CLICK</button>
         </div>
 
         <div data-key="71" class="key">
           <h1>G</h1>
           <span class="sound">boom</span>
+          <button onclick="fun4()">CLICK</button>
         </div>
 
         <div data-key="72" class="key">
           <h1>H</h1>
           <span class="sound">ride</span>
+          <button onclick="fun5()">CLICK</button>
         </div>
 
         <div data-key="74" class="key">
           <h1>J</h1>
           <span class="sound">snare</span>
+          <button onclick="fun6()">CLICK</button>
         </div>
 
         <div data-key="75" class="key">
           <h1>K</h1>
           <span class="sound">tom</span>
+          <button onclick="fun7()">CLICK</button>
         </div>
 
         <div data-key="76" class="key">
           <h1>L</h1>
           <span class="sound">tink</span>
+          <button onclick="fun8()">CLICK</button>
         </div>
 
       </div>
